--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="item" id="av">
         <div class="headline">
             <img src="images/image1.png">
-            <div class="date">19. Nov. 20 - 17-19h</div>
+            <div class="date">19. Nov. 20 - 17-19h CET</div>
             <h3 class="main">Annette Vee on Coding Literacy:</h3><h3>How Computer Programming Is Changing Writing</h3>
         </div>
 
@@ -95,7 +95,7 @@
     <div class="item" id="sp">
         <div class="headline">
             <img src="images/image2.png">
-            <div class="date">03. Dec. 20 - 17-19h</div>
+            <div class="date">03. Dec. 20 - 17-19h CET</div>
             <h3 class="main">Stefan Püst on Coding Practices and Music:</h3><h3>Towards a Textual Language Interface for High Level Composition </h3>
         </div>
         <p>After earning his B.Sc. in Computer Science at the University of Applied Science in Brandenburg, <span class="name">Stefan Püst</span> worked as Android App developer for telematics system at the IBM Client Innovation Center in Magdeburg, next to pursuing a master&rsquo;s degree in the digital media program at the University of Applied Science in Brandenburg. Since 2016 he has worked as IT admin at the Film University. He was responsible for managing the computer lab infrastructure for the Animation, Set Design and Creative Technologies programs. Since 2019 Stefan is a <a href="https://www.filmuniversitaet.de/en/studies/study-programs/master-programs/creative-technologies/faculty-staff">research associate in the Creative Technologies group</a> and pursues a PhD and researches music interaction mechanisms.</p>
@@ -110,7 +110,7 @@
     <div class="item" id="pd">
         <div class="headline">
             <img src="images/image3.png">
-            <div class="date">07. Jan. 21 - 15-17h</div>
+            <div class="date">07. Jan. 21 - 15-17h CET</div>
             <h3 class="main">Pierre Depaz</h3><h3>On the Role of Aesthetics In Understanding Source Code</h3>
         </div>
         <p><span class="name">Pierre Depaz</span> practically, writes software for arts and media organizations, such as <a href="https://pierredepaz.net/project/000_thelitany.json">museum pieces</a>, <a href="https://pierredepaz.net/project/010_skypeheartbreakshow.json">interactive installations</a>, <a href="https://pierredepaz.net/project/006_recompositions.json">machine learning</a> or <a href="https://pierredepaz.net/project/020_synaesthesiaplayground.json">live performance</a>, amongst others. Conceptually, he wrote versions of <a href="https://github.com/periode/augmenting-gallery">augmenting</a> the gallery, <a href="https://github.com/periode/politics-of-code/">politics</a> of code, software art (<a href="https://github.com/periode/software-art-image">image</a> + <a href="https://github.com/periode/software-art-text">text</a>) , alternate <a href="https://github.com/periode/alternate-realities">realities</a>, <a href="http://commlab.nyuad.im">communications</a> lab at new york university, digital <a href="https://github.com/periode/digital-culture">culture</a> at sciences po and computational <a href="https://github.com/periode/computational-representations/">representations</a> at the Film University. He currently teaches some of these.</p>
@@ -128,7 +128,7 @@
     <div class="item" id="ep">
         <div class="headline">
             <img src="images/image1.png">
-            <div class="date">25. Feb. 21 - 17-19h</div>
+            <div class="date">25. Feb. 21 - 17-19h CET</div>
             <h3 class="main">Eleni-Ira Panourgia on Constructing Behaviour from Physical to Digital:</h3><h3>Form, response and playability across sound and sculpture</h3>
         </div>
         <p><span class="name">Eleni-Ira Panourgia</span> is a Teaching and Research Fellow (ATER) at Gustave Eiffel University (former Paris-Est Marne-la-Vallée). She recently completed a PhD in Art at the University of Edinburgh as a Scholar of the Onassis Foundation. Her research focuses on intersections of sculpture, spatial dimensions and sound. She is working simultaneously on physical material and sound and is interested in developing an understanding of such complex morphologies and their potential within artistic, design and social processes. Her research interests also include material exploration, audio-visual relationships, participatory and interactive design.</p>
@@ -143,7 +143,7 @@
     <div class="item" id="ja">
         <div class="headline">
             <img src="images/image5.png">
-            <div class="date">11. Mar. 21 - 17-19h</div>
+            <div class="date">11. Mar. 21 - 17-19h CET</div>
             <h3 class="main">Juliane Ahlborn on the Computation of Arts</h3><h3>Aesthetics - Subject - Education</h3>
         </div>
         <p><span class="name">Juliane Ahlborn</span> completed her studies of Media Education - Audiovisual Culture and Communication at the Otto-von-Guericke University Magdeburg in March 2020. She works as a research assistant at the Centre for Teacher Training at the Otto-von-Guericke University. Furthermore, she is holding a scholarship of the State of Saxony-Anhalt since July 2020. In her dissertation on <a href="https://www.ebdw.ovgu.de/ebdw/en/aiandart-p-500.html">Aesthetics - Subject - Education: The computation of arts</a>, she is concerned with changed structural conditions for education and subjectivation that owe their existence to digital mediality.</p>
@@ -160,7 +160,7 @@
     <div class="item" id="ax">
         <div class="headline">
             <img src="images/image1.png">
-            <div class="date">29. Apr. 21 - 17-19h</div>
+            <div class="date">29. Apr. 21 - 17-19h CEST</div>
             <h3 class="main">Anna Xambó Sedó on collaborative live coding</h3> <h3>Insights into MIRLCAuto: A virtual agent for music information retrieval in live coding.</h3>
         </div>
         <p><span class="name">Anna Xambó Sedó</span> is a researcher and musician with background in computer science engineering, digital humanities and digital arts. She is currently a Senior Lecturer in Music and Audio Technology at the Faculty of Computing, Engineering and Media (CEM) at De Montfort University (DMU) and work as the principal investigator (PI) for the EPSRC HDI Network Plus funded project <a href="https://mirlca.dmu.ac.uk">MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding</a> at the <a href="https://www.dmu.ac.uk/research/research-faculties-and-institutes/technology/mtirc/mtirc.aspx">Music, Technology and Innovation - Institute for Sonic Creativity (MTI^2)</a> in Leicester, UK. She is also the programme leader of the <a href="https://www.dmu.ac.uk/study/courses/undergraduate-courses/digital-music-technology-bsc-degree/digital-music-technology-bsc-degree.aspx">BSc Digital Music Technology</a> programme. Since 2019, she
@@ -179,7 +179,7 @@
     <div class="item" id="nps">
         <div class="headline">
             <img src="images/image3.png">
-            <div class="date">13. May 21 - 17-19h</div>
+            <div class="date">13. May 21 - 17-19h CEST</div>
             <h3 class="main">Nick Seaver on Refiguring the Black Box:</h3> <h3> The Ethnography of Algorithmic Systems</h3>
         </div>
         <p><span class="name">Nick Seaver</span> is an assistant professor in the <a href="http://ase.tufts.edu/anthropology/">Department of Anthropology</a> at Tufts University, where he also teaches in the <a href="http://as.tufts.edu/sts/">Science, Technology, and Society</a>&nbsp;program. Before that, he got his undergraduate degree in <a href="http://complit.yale.edu/literature-major">Literature</a> at Yale University, a Masters of Science in <a href="http://cmsw.mit.edu/">Comparative Media Studies</a> from MIT, and his PhD in <a href="http://www.anthropology.uci.edu/">Anthropology</a> from UC Irvine.</p>
@@ -198,7 +198,7 @@
     <div class="item" id="wsgx">
         <div class="headline">
             <img src="images/image1.png">
-            <div class="date">17. June 21 - 17-19h</div>
+            <div class="date">17. June 21 - 17-19h CEST</div>
             <h3 class="main">Winnie Soon and Geoff Cox on Aesthetic Programming</h3> <h3>A Handbook of Software Studies</h3>
         </div>
         <p>
